@@ -9,6 +9,7 @@ Version 0.2.2~dev
 	* Add scripts as a workaround to current situation with tvrbox
 	  streaming.
 	* Do not send mail if commands did not lived long enough.
+	* Add basic mail sending script.
 
 Version 0.2.1 Released on 2009/04/09
 
